<resources>
    <string name="app_name">Foodies</string>
    <string name="titleAllDishes">All Dishes</string>
    <string name="titleFavoriteDishes">Favorite</string>
    <string name="titleRandomDish">Random Dish</string>
    <string name="splashScreenTitle">Foodies</string>
    <string name="image">Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addDishAction">Add Dish</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="cookingTimeMinutes">Cooking Time in Minutes</string>
    <string name="directions">Directions to Cook</string>
    <string name="addDish">Add Dish</string>
    <string name="selectImageAction">Select Image Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="item">Item</string>
    <string name="listTitle">List Title</string>
    <string name="noDishesAdded">No dishes added yet</string>
    <string name="dishTitle">Dish Title</string>
    <string name="titleDishDetails">Dish Details</string>
    <string name="estimateCookingTime">"The approx time required to cook the dish is %1$s minutes."</string>
    <string name="noFavoriteDishesAdded">No favorite dishes added yet</string>
    <string name="editDish">Edit Dish</string>
    <string name="deleteDish">Delete Dish</string>
    <string name="updateDish">Update Dish</string>
    <string name="warning">Warning!</string>
    <string name="sort">Sort</string>
    <string name="selectItemToSortTitle">Select Item to Sort</string>
    <string name="alreadyAddedToFavorite">You have already added the dish to your favorites!</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="share">Share Dish</string>
    <string name="notificationTitle">Checkout new dish recipes</string>
    <string name="notificationSubtitle">Tap for more details</string>
</resources>